--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             });
         </script>
     </div>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.1/annyang.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
