added a prompt form

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <input type="text" id="context" placeholder="Enter context...">
         </div>
         <div>
+            <label for="prompt">Prompt:</label>
+            <input type="text" id="" placeholder="Enter prompt...">
+        </div>
+        <div>
             <label for="role">Role:</label>
             <select id="role">
                 <!-- The options will be populated by JavaScript -->
